--- a/_posts/interviews/2023-03-09-Network.md
+++ b/_posts/interviews/2023-03-09-Network.md
@@ -1,14 +1,14 @@
-<!-- ---
+---
 title: 计算机网络面试题
 author: Yu Mengchi
 date: '2023-03-09 19:02 +8'
 categories:
-  - Interview
+  - interviews
   - Network
 tags:
-  - Interview
+  - interviews
   - Network
---- -->
+---
 
 计算机网络
 
