--- a/_posts/interviews/2023-03-13-OS.md
+++ b/_posts/interviews/2023-03-13-OS.md
@@ -1,5 +1,5 @@
 ---
-title: 操作系统
+title: 操作系统面试题
 author: Yu Mengchi
 categories:
   - Interview
@@ -8,7 +8,7 @@ tags:
   - OS
 ---
 
-# 操作系统
+# 操作系统面试题
 
 ---
 
@@ -63,3 +63,75 @@ tags:
 - Mutex（互斥量）：
 - Semaphore（信号量）：
 - Event（事件）：
+
+---
+
+### 进程的调度算法
+
+- FCFS
+- SJF（短作业优先）
+- 时间片轮转调度算法
+- 多级反馈队列调度算法
+- 优先级调度
+
+---
+
+### 什么是死锁？死锁的四个必要条件？如何解决死锁？
+
+多个进程/线程同时被阻塞，同时等待资源释放，导致进程/线程无限期阻塞等待，程序无法正常终止。
+
+- 互斥；
+- 占有并等待；
+- 非抢占；
+- 循环等待；
+
+解决死锁的方法：
+- 预防：限制并发进程同时对资源的请求，可以通过静态分配策略，一次性申请全部所需资源。
+- 避免：允许同时存在四个必要条件，但是要掌握每个进程的资源申请情况，作出正确的选择。比如用银行家算法避免系统进入不安全状态。
+- 检测：系统定时执行一个"死锁检测"程序，判断系统是否出现死锁情况，在采取措施解除死锁。检测方式可以用进程-资源分配图判断，判断是否有环，并且每个资源类仅有一个资源。
+- 解除：解除方式有立即结束所有进程执行；撤销涉及死锁的进程；逐个撤销涉及死锁的进程；抢占资源，重新分配。
+
+---
+
+### 常见的几种内存管理机制？
+
+- 快式管理
+- 页式管理
+- 段式管理
+
+---
+
+### 快表和多级页表
+
+---
+
+### 分页机制和分段机制的共同点和区别？
+
+---
+
+### 逻辑地址和物理地址
+
+---
+
+### 为什么需要虚拟地址空间？
+
+---
+
+### 什么是虚拟内存？
+
+---
+
+### 页面置换算法？
+
+- OPT（最佳页面置换算法）：没法实现
+- FIFO（先进先出页面置换算法）
+- LRU（最近最久未使用页面置换算法）
+- LFU（最少使用页面置换算法）
+
+---
+
+
+
+---
+
+### 
