--- a/_posts/interviews/2023-03-14-Java.md
+++ b/_posts/interviews/2023-03-14-Java.md
@@ -28,3 +28,29 @@ tags:
 
 ---
 
+### JVM的内存模型？
+
+---
+
+### Java的内存结构
+
+---
+
+### Java的类加载过程？
+
+---
+
+### 字节码的注入技术有没有了解？
+
+---
+
+### java 多线程的同步机制
+
+---
+
+### java 锁的实现原理
+
+---
+
+
+
