--- a/_posts/interviews/2023-03-14-DB.md
+++ b/_posts/interviews/2023-03-14-DB.md
@@ -75,6 +75,9 @@ MySQL主要由连接器、分析器、优化器、执行器、存储引擎组成
 
 ### MySQL日志有哪些？如何工作的？redo日志和undo日志区别？实现什么效果，为什么要加日志？
 
+- binlog：实现主从复制、数据备份
+- redo log：保证事务的一致性
+- undo log：保证事务的原子性
 
 ---
 
@@ -92,7 +95,9 @@ MySQL主要由连接器、分析器、优化器、执行器、存储引擎组成
 
 - 脏读：一个事务对数据修改，但是还没有提交，这时另一个事务读到了未提交的数据，之后第一个事务又回滚了，导致第二个事务读到的数据是错误的。
 - 不可重复读（Un repeatable read）：一个事务修改数据，另一个事务同时读取两次数据，前后两次读取可能会因为第一个事务的修改导致读取结果不一致。
-- 幻读（Phantom read）：一个事务多次读取同一个数据时，由于另一个事务同步修改，导致多次读取的记录条数不一致，重点是读取的记录条数不一致，和不可重复读类似，不可重复读的重点是多次读取的记录的值不一致。
+- 幻读（Phantom read）：一个事务多次读取同一个数据时，由于另一个事务同步修改，导致多次读取的记录条数不一致，重点是读取的记录条数不一致，和不可重复读类似，不可重复读的重点是多次读取的记录的值不一致。想要解决幻读，重点是要防止一个事务在读取数据的时候另一个事务删除或新增数据，可以添加表锁+Next key lock
+
+InnoDB在默认的RR（可重复读）隔离级别下使用MVCC+Next Key Lock防止幻读。
 
 ---
 
@@ -134,9 +139,28 @@ MySQL主要由连接器、分析器、优化器、执行器、存储引擎组成
 
 ### 使用索引应该注意什么？
 
+哪些字段适合做索引？
+- 经常查询的字段
+- 不为null的字段
+- 被作为where条件查询的字段
+- 被频繁用来连接的字段
+
+使用索引应该注意什么？
+- 经常更新的字段不应该作为索引
+- 每张表最好不超过5个索引，因为mysql优化器会选择最佳的执行计划，会耗时
+- 尽可能建联合索引
+- 避免索引失效
+
 ---
 
 ### 什么情况下索引会失效？
+
+- 使用select * 
+- 创建了组合索引但是查询条件未遵循最左匹配原则
+- 在索引列上进行计算，使用函数、类型转换等操作
+- 以%开头的like查询
+- 使用or的时候，如果有一个字段没有索引，会导致其他字段的索引失效
+- 发生隐式转换（操作符两边类型不一样，比如一定要用双引号表明是字符串：where name="lijia"）
 
 ---
 
@@ -145,7 +169,9 @@ MySQL主要由连接器、分析器、优化器、执行器、存储引擎组成
 
 ---
 
-### sql执行缓慢应该如何解决？如何调优？
+### sql执行缓慢应该如何解决？如何调优？导致慢查询的原因？
+
+- 索引失效
 
 
 ---
@@ -156,5 +182,34 @@ MySQL主要由连接器、分析器、优化器、执行器、存储引擎组成
 
 ---
 
+### 如何使用读写分离(解决读高并发)和分库分表(解决存储压力)提高查询性能
+
+首先使用主从架构部署多台MySQL服务器，第二步实现主从复制，第三步把写请求发到主服务器，读请求分发到从服务器。
+主写从读，会带来主从不一致问题，
+
+---
+
+### 主从复制过程
+
+1. 主库写数据到binlog
+2. 主库创建binlog dump线程，把binlog发送到从库，从库创建IO线程，接收binlog
+3. 从库IO线程接收binlog后写入到relay log中
+4. 从库创建SQL线程读取relay log同步数据
 
 
+---
+
+### 分库分表如何实现
+
+- 垂直分表：把一个列数比较多的表拆分为多个表；
+- 水平分表：把一个行比较多的表拆分成多个表；
+
+数据水平分片之后，通过分片算法决定存放在那个表中。可以
+- 哈希分片
+- 范围分片
+- 地理位置分片
+- 融合分片
+
+分表后带来的问题是join连接比较麻烦，事务操作无法保证，如何生成全局唯一的主键id
+
+---
