--- a/_posts/interviews/2023-03-14-系统设计.md
+++ b/_posts/interviews/2023-03-14-系统设计.md
@@ -17,7 +17,12 @@ tags:
 
 ---
 
-### 缓存雪崩、缓存击穿、缓存xx 分别表示什么意思？如何解决？
+### 缓存雪崩、缓存击穿、缓存穿透 分别表示什么意思？如何解决？
+
+- 缓存穿透：大量请求的数据既不在缓存中，也不再数据库中。解决方法：布隆过滤器（用布隆过滤器先判断请求的数据在不在数据库中）
+- 缓存击穿：热点数据的缓存过期，导致同一时间大量对热点数据的请求直接落到数据库上。解决方法：热点数据用不过期。
+- 缓存雪崩：缓存在同一时间大面积失效，导致大量的请求直接落到数据库上。比如缓存服务器宕机。解决方法：1.采用redis集群 2.限流 3.随机设置缓存失效时间 4. 设置二级缓存
+
 
 ---
 
