--- a/_posts/interviews/2023-03-14-Redis.md
+++ b/_posts/interviews/2023-03-14-Redis.md
@@ -16,7 +16,61 @@ tags:
 
 ---
 
+### redis线程模式
+
+Redis 基于 Reactor 模式开发了自己的网络事件处理器：这个处理器被称为文件事件处理器（file event handler）。
+- 文件事件处理器使用 I/O 多路复用（multiplexing）程序来同时监听多个套接字，并根据套接字目前执行的任务来为套接字关联不同的事件处理器。
+- 当被监听的套接字准备好执行连接应答（accept）、读取（read）、写入（write）、关 闭（close）等操作时，与操作相对应的文件事件就会产生，这时文件事件处理器就会调用套接字之前关联好的事件处理器来处理这些事件。
+
+> 虽然文件事件处理器以单线程方式运行，但通过使用 I/O 多路复用程序来监听多个套接字，文件事件处理器既实现了高性能的网络通信模型，又可以很好地与 Redis 服务器中其他同样以单线程方式运行的模块进行对接，这保持了 Redis 内部单线程设计的简单性。
+
+> 通过IO多路复用模型连接多个客户端，通过文件时间处理器分配事件处理。
+
+---
+
+### 文件事件处理器组成
+
+- 多个socket套接字
+- IO多路复用程序
+- 文件事件分派器
+- 多种事件处理器（命令请求处理器、命令回复处理器、连接应答处理器、主从连接处理器）
+
+### Redis的数据结构有哪些？
+
+- String：SDS
+- Hash
+- List
+- Set
+- ZSet
+
+---
+
+### rdb和aof两种持久化机制比较？AOF重写？
+
+- RDB： 对内存中数据创建副本，创建快照副本可以用redis提供的两个命令，save命令是又主线程执行；bgsave命令是由子线程执行，不会阻塞主线程。
+- AOF：每次执行对数据更改的命令，会把该命令先写入缓存文件，在根据不同的策略（每秒一次）写入到磁盘中的AOF文件。主流持久化方式，可以把缓存设置为每秒写入磁盘一次。
+
+> AOF重写：执行BGREWRITEAOF命令的时候，创建新AOF文件时，会同时创建一个缓存区，保存这个期间服务器执行的写命令，然后把缓冲区内容加入新AOF文件，最后用新的AOF文件替换旧的AOF文件。
+
+- RDB存储的是压缩后的二进制文件，文件比较小。使用RDB恢复数据时直接解析还原数据就行，比较快，不需要一条条执行命令。
+- AOF优点在于保存的是命令，可以快速持久化，支持每秒同步一次，操作比较轻量。
+
+
+---
+
+### redis如何使用事务？
+
+可以使用MULTI和EXEC命令开启事务，输入MULTI之后，redis会把后面的命令加入队列，不会立即执行。在输入EXEC命令后会一次所有的执行。
+
+
+
+---
+
 ### Redis为什么快？
+
+- 基于内存
+- 基于reactor模式的事件处理模型，主要是单线程事件循环和IO多路复用
+- 优化后的数据结构
 
 ---
 
@@ -25,7 +79,27 @@ tags:
 
 ---
 
-### 缓存过期后处理策略？
+### 缓存更新策略有哪几种？内存淘汰机制？
+
+- volatile-lru
+- volatile-ttl
+- volatile-random
+- allkeys-lru
+- allkeys-random
+- no-eviction
+
+4.0版本后增加了两种：
+- volatile-lfu
+- allkeys-lfu
+
+---
+
+### 缓存过期后处理策略？删除策略？
+
+- 惰性删除
+- 定期删除
+
+> redis采用惰性删除+定期删除
 
 ---
 
