--- a/_posts/interviews/2023-03-14-系统设计.md
+++ b/_posts/interviews/2023-03-14-系统设计.md
@@ -30,4 +30,31 @@ tags:
 
 ---
 
+### 认证和授权
+
+
+
+---
+
+### Cookie和Session
+
+- Cookie保存在客户端，保存用户信息
+- Session是通过服务端记录用户的状态
+
+---
+
+### OAuth 2.0
+
+---
+
+### 定时任务如何实现？
+
+- Timer
+- ScheduledThreadPoolExecutor
+- Spring @Schedule
+- 时间轮
+
+---
+
+
 
