--- a/_posts/interviews/2023-03-14-Kafka.md
+++ b/_posts/interviews/2023-03-14-Kafka.md
@@ -12,19 +12,50 @@ tags:
 
 ---
 
+### 消息队列的重复消费、消息丢失、消息顺序等问题如何保证？
+
+---
+
 ### Kafka的架构
 
 ---
 
 ### Kafka如何保证消息的有序性
 
+- 一个topic只指定一个partition（不现实）
+- 发送消息的时候指定发到哪个partition和key
+保证将同一个语义下消息放到同一个partition分区中，比如一个订单有支付、发货、评价三条消息，要将同一个订单的这三条消息发送到同一个分区中，保证有序性。
+具体做法可以用哈希取模。
+
+
+
 ---
 
-### Kafka如何保证消息的唯一性？
+### 如何保证消息不丢失？
+
+- 生产端丢失：调用send方法发送之后使用回调函数判断是否发送成功
+- 消费端丢失：关闭自动提交offset，只有真正消费了之后才提交offset值。但是会带来重复消费的问题
+- Kafka丢失：设置acks=all，只有全部副本都收到消息才表示发送成功，但是这样延迟会很高；设置replication.factor>=3,保证每个分区有至少3个副本，保证数据安全；
+min.insync.replica>=1,代表消费至少要被写入两个副本才表示发送成功。这个参数表示消息需要被写入多少个副本里，acks参数表示消息
 
 ---
 
-### Kafka消息会丢失吗？消息堆积怎么办
+### Kafka如何保证消息的唯一性？如何保证不重复消费？
+
+- 消费消息的服务做幂等校验，比如redis的set、mysql的主键；
+保证消息消费的幂等还是需要结合具体业务来实现的，比如可以让消费的消息写入redis，保证新来的消息不再redis中，也就是保证这条消息之前没有被消费过。也可以把消费的消息写入数据库，基于数据库的唯一键，保证消息不会被重复插入多条。
+- 关闭自动提交enable.auto.commit设置为false，开发者在消费后手动提交。
+手动提交的时候如果是消费消息后再提交，还是会出现重复消费的现象。另一种是拉取到消息后就立马提交，这种情况如果拉取到消息，提交了offset，但此时服务端挂了，重启之后就可能有消息丢失，漏消费的情况，一般在允许消息延时的场景会使用这种方式。
+
+
+---
+
+### Kafka出现消息堆积怎么办？
+
+一般情况出现消息堆积要么就是生产者发送消息太快或者是消费者消费太慢。
+一般会增加消费者实例数量，同时也要增加分区数量，因为一个分区只会被一个消费者消费，只增加消费者实例不增加分区只会增加空闲的消费者实例。
+另外如果是生产者消息发送太快的话，可能是系统出现流量高峰，应该在上游就考虑限流降级。
+如果是消费者消费太慢的话，可以看看是不是消费过程中出现了异常，
 
 ---
 
@@ -32,4 +63,13 @@ tags:
 
 
 ---
+
+### RocketMQ消息队列如何实现分布式事务？
+
+消息队列中的事务指的是"发送端的本地事务"和"把消息发送到消息队列"这两个事件是属于同一个事务，要保证这两个操作要么都执行要么都不执行。
+
+> 在RocketMQ中解决的方法就是使用事务消息加上事务反查机制来保证事务。发送端会发送事务消息给消息队列（事务消息也就是指half1消息，half消息暂时不会被消费端消费，会保存在另一个topic中，只有当发送端确定要commit该事务或rollback时，才会让消费端消费该消息）
+发送端发送commit消息或rollback消息到消息队列之后，如果消息队列没有收到commit消息或rollback消息，那么消息队列会通过一个事务反查机制，向发送端发送事务反查消息，确定是否要把最开始的事务消息给消费端消费。
+
+
 
