--- a/_posts/算法/剑指offer第二版/2023-03-27-二进制加法.md
+++ b/_posts/算法/剑指offer第二版/2023-03-27-二进制加法.md
@@ -1,5 +1,5 @@
 ---
-title: 第一章 整数
+title: 二进制加法
 author: Yu Mengchi
 categories:
   - 算法 
@@ -10,7 +10,7 @@ tags:
   - 整数
 ---
   
-#面试题2：二进制加法
+# 面试题2：二进制加法
 
 ---
 
@@ -19,6 +19,7 @@ tags:
 对于二进制加法，先将两个参数右对齐，从右开始向左，取a的字符，取b的字符，然后在判断该位上应该得到'0'还是'1'，由于还有进位要处理，所以还要用一个变量carry表示进位。
 这里需要记住的两个点是：
 - 对于循环条件，一开始可能会认为应该用下面的方式，i从0开始循环直到长度的最小值。但这种不太简练还繁琐，书上做法是，从右往左遍历，对于短的字符串，如果下标已经超过了最前面，直接用'0'补齐就可以了。
+
 ![img.png](../../../assets/img/img6.png)
 
 ![img.png](../../../assets/img/img7.png)
