--- a/_posts/算法/剑指offer第二版/2023-03-27-前n个数字二进制形式中1的个数.md
+++ b/_posts/算法/剑指offer第二版/2023-03-27-前n个数字二进制形式中1的个数.md
@@ -10,7 +10,7 @@ tags:
   - 整数
 ---
   
-# 前n个数字二进制形式中1的个数
+# 面试题3：前n个数字二进制形式中1的个数
 
 ---
 
@@ -28,7 +28,7 @@ tags:
 1.首先每一位都要做与判断该位是不是1，则判断一个数num的时间复杂度就是O(n),n位num的二进制表示长度；
 2.怎么得到1、10、100、1000、10000...呢？
 
-所以这种做法是肯定通过不了的。书上的解法是，依次删除num最右边的1，知道num变为0，说明num中的1都被删除完了，只要判断删除了多少次，就说明num中有多少1。
+所以这种做法是肯定通过不了的。书上的解法是，依次删除num最右边的1，直到num变为0，说明num中的1都被删除完了，只要判断删除了多少次，就说明num中有多少1。
 
 ![img_1.png](../../../assets/img/img9.png)
 
