--- a/_posts/算法/剑指offer第二版/2023-03-28-单词长度的最大乘积.md
+++ b/_posts/算法/剑指offer第二版/2023-03-28-单词长度的最大乘积.md
@@ -1,5 +1,5 @@
 ---
-title: 单词长度的最大乘积
+title: 面试题5：单词长度的最大乘积
 author: Yu Mengchi
 categories:
   - 算法 
@@ -9,8 +9,7 @@ tags:
   - 二进制
   - 整数
 ---
-  
-# 面试题5： 单词长度的最大乘积
+
 
 ---
 
