--- a/_posts/算法/剑指offer第二版/2023-03-28-排序数组中的两个数字之和.md
+++ b/_posts/算法/剑指offer第二版/2023-03-28-排序数组中的两个数字之和.md
@@ -1,5 +1,5 @@
 ---
-title: 排序数组中的两个数字之和
+title: 面试题6：排序数组中的两个数字之和
 author: Yu Mengchi
 categories:
   - 算法 
@@ -9,9 +9,7 @@ tags:
   - 数组
 ---
   
-# 面试题6：排序数组中的两个数字之和
 
----
 
 > 题目：输入一个递增排序的数组和一个值k，请问如何在数组中找出两个和为k的数字并返回它们的下标？假设
 > 数组中存在且只存在一对符合条件的数字，同时一个数字不能使用两次。例如，输入数组[1,2,4,6,10],k的值为8，
