--- a/_posts/算法/剑指offer第二版/2023-03-28-和大于或等于k的最短子数组.md
+++ b/_posts/算法/剑指offer第二版/2023-03-28-和大于或等于k的最短子数组.md
@@ -25,7 +25,7 @@ tags:
 
 - 连续子数组
 - 最短长度，也就是说数组内的和刚刚好大于或等于k值。
-- 这种用两个指针伸缩式的移动窗口解法一定要记住！！！！
+- 这种用两个指针伸缩式的移动窗口解法一定要记住！！！！先定义left=0，然后对right一个for循环，循环中加一个能让left一直++的条件的while条件循环
 
 代码：
 
