--- a/_posts/算法/剑指offer第二版/2023-03-30-链表.md
+++ b/_posts/算法/剑指offer第二版/2023-03-30-链表.md
@@ -55,7 +55,7 @@ leetcode后来增加了测试用例，增加了没有公共节点的情况，所
 ### 思路
 
 ```Java
-//方法1：前后指针，用空指针开始，严格来说，这不是头插法
+//方法1：前后指针，用空指针开始，严格来说，这不是头插法。但是书上是用这种解法
 class Solution {
     public ListNode reverseList(ListNode head) {
         ListNode pre = null;
@@ -104,5 +104,111 @@ class Solution {
     }
 }
 ```
+
 ---
 
+## 面试题25 链表中的数字相加
+
+### 思路
+
+反转后的两个链表相加的时候，要用哨兵节点保存头节点；还要记住进位的计算方式
+
+---
+
+## 面试题26 重排链表
+
+### 思路
+
+先对半分，获得第二办的头节点；把第二半的链表反转；用prev指针辅助重排。
+最重要的就是下面的将两个链表重排操作
+![img_1.png](../../../assets/img/img26.png)
+
+---
+
+## 面试题27 回文链表
+
+### 思路
+
+先对半分，将第二个链表反转，再一个个判断节点是否相同。要注意的是：
+
+- 对半分的时候，链表如果有奇数个节点，那么第一个链表的最后一个多出来的节点就不要了。
+
+---
+
+## 面试题28 展开多级双向链表
+
+### 思路
+
+![img_1.png](../../../assets/img/img27.png)
+
+---
+
+## 面试题29 排序的循环链表
+
+### 思路
+循环判断当前节点和下一节点，是不是可以插在当前节点和下一节点之间，并且在循环过程中记录链表中最大值；
+如果循环一圈之后都不能插在当前节点和下一节点之间，说明新加入节点的是最大值或最小值，需要插在最大值和最小值之间，
+这个时候就利用记录下来的最大值节点插入。
+
+![img_1.png](../../../assets/img/img28.png)
+
+
+---
+
+## 面试题30 插入、删除和随机访问都是O(1)的容器
+
+### 思路 
+
+```Java
+class RandomizedSet {
+    HashMap<Integer, Integer> numToLocation;
+    ArrayList<Integer> nums;//数组用ArrayList实现
+
+    /** Initialize your data structure here. */
+    public RandomizedSet() {
+        numToLocation = new HashMap<>();
+        nums = new ArrayList<>();
+    }
+    
+    /** Inserts a value to the set. Returns true if the set did not already contain the specified element. */
+    public boolean insert(int val) {
+        if (numToLocation.containsKey(val)) {
+            return false;
+        } else {
+            nums.add(val);
+            numToLocation.put(val, nums.size() - 1);
+            return true;
+        }
+    }
+    
+    /** Removes a value from the set. Returns true if the set contained the specified element. */
+    public boolean remove(int val) {
+        if (!numToLocation.containsKey(val)) {
+            return false;
+        } else {
+            //删除一个元素的时候要注意，数组将最后一个元素和待删除元素交换位置，然后直接删除最后一个位置上的元素就行。避免后面的元素移动位置。
+            int location = numToLocation.get(val);
+            numToLocation.put(nums.get(nums.size() - 1), location);
+            numToLocation.remove(val);
+            nums.set(location, nums.get(nums.size() - 1));
+            nums.remove(nums.size() - 1);
+            return true;
+        }
+    }
+    
+    /** Get a random element from the set. */
+    public int getRandom() {
+        Random random = new Random();
+        int r = random.nextInt(nums.size());
+        return nums.get(r);
+    }
+}
+
+/**
+ * Your RandomizedSet object will be instantiated and called as such:
+ * RandomizedSet obj = new RandomizedSet();
+ * boolean param_1 = obj.insert(val);
+ * boolean param_2 = obj.remove(val);
+ * int param_3 = obj.getRandom();
+ */
+```
