--- a/_posts/算法/剑指offer第二版/2023-03-30-链表.md
+++ b/_posts/算法/剑指offer第二版/2023-03-30-链表.md
@@ -212,3 +212,94 @@ class RandomizedSet {
  * int param_3 = obj.getRandom();
  */
 ```
+
+---
+ 
+## 面试题31： 最近最少使用缓存
+
+### 思路
+
+用哈希表和双向链表实现，哈希表中键是key，值是双向链表的节点；双向链表中一个节点有key，value，next，prev指针。
+- 插入元素的时候，如果缓存中有，直接将该节点移到尾节点；如果缓存没有，需要先看缓存时候慢了，如果满了，要先把双向链表中头节点和哈希表中该节点移除，然后插入双向链表尾部。
+
+```Java
+class LRUCache {
+
+    class ListNode {
+        public int key;
+        public int value;
+
+        public ListNode next;
+        public ListNode prev;
+        public ListNode(int k, int v) {
+            key = k;
+            value = v;
+        }
+    }
+
+    private ListNode head;
+    private ListNode tail;
+    private Map<Integer, ListNode> map;
+    int cap;
+
+    public LRUCache(int capacity) {
+        map = new HashMap<>();
+        head = new ListNode(-1, -1);
+        tail = new ListNode(-1, -1);
+        head.next = tail;
+        tail.prev = head;
+
+        cap = capacity; //构造函数的参数和成员变量参数不能相同
+    }
+    
+    public int get(int key) {
+        ListNode node = map.get(key);
+        if (node == null) {
+            return -1;
+        }
+        moveToTail(node, node.value);
+        return node.value;
+    }
+    
+    public void put(int key, int value) {
+        if (map.containsKey(key)) {
+            moveToTail(map.get(key), value);
+        } else {
+            if (map.size() == cap) {
+                ListNode toBeDeleted = head.next;
+                deleteNode(toBeDeleted);
+                map.remove(toBeDeleted.key);
+            }
+            ListNode node = new ListNode(key, value);
+            insertToTail(node);
+            map.put(key, node);
+        }
+    }
+    //辅助函数
+    private void moveToTail(ListNode node, int newValue) {
+        deleteNode(node);
+        node.value = newValue;
+        insertToTail(node);
+    }
+    private void deleteNode(ListNode node) {
+        node.prev.next = node.next;
+        node.next.prev = node.prev;
+    }
+    private void insertToTail(ListNode node) {
+        tail.prev.next = node;
+        node.prev = tail.prev;
+        node.next = tail;
+        tail.prev = node;
+    }
+}
+
+/**
+ * Your LRUCache object will be instantiated and called as such:
+ * LRUCache obj = new LRUCache(capacity);
+ * int param_1 = obj.get(key);
+ * obj.put(key,value);
+ */
+```
+
+---
+
