--- a/_posts/算法/剑指offer第二版/2023-04-04-哈希表.md
+++ b/_posts/算法/剑指offer第二版/2023-04-04-哈希表.md
@@ -16,7 +16,7 @@ tags:
 
 ### 思路
 
-```Java
+```java
 class RandomizedSet {
     HashMap<Integer, Integer> numToLocation;
     ArrayList<Integer> nums;//数组用ArrayList实现
@@ -79,7 +79,7 @@ class RandomizedSet {
 用哈希表和双向链表实现，哈希表中键是key，值是双向链表的节点；双向链表中一个节点有key，value，next，prev指针。
 - 插入元素的时候，如果缓存中有，直接将该节点移到尾节点；如果缓存没有，需要先看缓存时候慢了，如果满了，要先把双向链表中头节点和哈希表中该节点移除，然后插入双向链表尾部。
 
-```Java
+```java
 class LRUCache {
 
     class ListNode {
@@ -166,7 +166,7 @@ class LRUCache {
 
 这个题在leetcode和书上有点不一样，leetcode要求字符顺序不完全相同，如果两个字符一样要返回false，书上没考虑这些。
 
-```Java
+```java
 class Solution {
     public boolean isAnagram(String s, String t) {
         if (s.length() != t.length() || s.equals(t)) {
@@ -195,7 +195,7 @@ class Solution {
 
 因为一组变位词将字符串按字母排序后会归为同一个字符串，所以用一个map，key为一组排序后的变位词的字符串，value为该组变位词。
 
-```Java
+```java
 class Solution {
     public List<List<String>> groupAnagrams(String[] strs) {
         Map<String, List<String>> map = new HashMap<>();
@@ -219,7 +219,7 @@ class Solution {
 
 用一个数组表示每个字符在新排序表中排在什么位置上，数字越小排名越考前
 
-```Java
+```java
 class Solution {
     public boolean isAlienSorted(String[] words, String order) {
         int[] orderArray = new int[order.length()];
@@ -262,7 +262,7 @@ class Solution {
 
 一天有1440个分钟，用一个1440长的数组表示出现的时间，然后计算每个相邻时间的下标之差
 
-```Java
+```java
 class Solution {
     public int findMinDifference(List<String> timePoints) {
         if (timePoints.size() > 1440) {
