--- a/_posts/算法/剑指offer第二版/2023-04-04-栈.md
+++ b/_posts/算法/剑指offer第二版/2023-04-04-栈.md
@@ -18,7 +18,7 @@ tags:
 
 一定要注意，减法和除法的时候要注意顺序
 
-```Java
+```java
 class Solution {
     public int evalRPN(String[] tokens) {
         Stack<Integer> stack = new Stack<>();
@@ -77,6 +77,32 @@ class Solution {
         }
         return stack.stream().mapToInt(i -> i).toArray();
 
+    }
+}
+```
+
+---
+
+## 面试题38: 每日温度
+
+### 思路
+
+```java
+class Solution {
+    public int[] dailyTemperatures(int[] temperatures) {
+        //用一个栈保存每日温度在数组中的下标，然后每次取一个温度与栈顶那天的温度比较，如果高，则得到栈顶那天的结果
+        int[] result = new int[temperatures.length];
+        Stack<Integer> stack = new Stack<>();
+        for (int i = 0; i < temperatures.length; i++) {
+            //栈顶那天的温度小于今天的温度
+            while (!stack.isEmpty() && temperatures[stack.peek()] < temperatures[i]) {
+                int prev = stack.peek();
+                result[prev] = i - prev;
+                stack.pop();
+            }
+            stack.push(i);
+        }
+        return result;
     }
 }
 ```
