--- a/_posts/算法/剑指offer第二版/2023-03-30-链表.md
+++ b/_posts/算法/剑指offer第二版/2023-03-30-链表.md
@@ -54,7 +54,7 @@ leetcode后来增加了测试用例，增加了没有公共节点的情况，所
 
 ### 思路
 
-```Java
+```java
 //方法1：前后指针，用空指针开始，严格来说，这不是头插法。但是书上是用这种解法
 class Solution {
     public ListNode reverseList(ListNode head) {
@@ -71,7 +71,7 @@ class Solution {
 }
 ```
 
-```Java
+```java
 //这种才是真正的头插法
 class Solution {
     public ListNode reverseList(ListNode head) {
@@ -87,7 +87,7 @@ class Solution {
     }
 }
 ```
-```Java
+```java
 //这种是递归解法
 class Solution {
     public ListNode reverseList(ListNode head) {
