--- a/_posts/算法/剑指offer第二版/2023-04-04-栈.md
+++ b/_posts/算法/剑指offer第二版/2023-04-04-栈.md
@@ -106,3 +106,49 @@ class Solution {
     }
 }
 ```
+
+---
+
+## 面试题39：直方图最大矩形面积
+
+### 思路
+
+代码中要注意一点是一开始向栈中加入-1，判断是否还有元素时也是判断栈顶元素是不是-1来判断的。
+
+```java
+class Solution {
+    public int largestRectangleArea(int[] heights) {
+        //用一个单调递增的栈，存放递增的柱子下标
+        Stack<Integer> stack = new Stack<>();
+        stack.push(-1);
+
+        int maxArea= 0;
+        for (int i = 0; i < heights.length; i++) {
+            //栈顶元素比当前元素大，因为要保存栈单调递增，所以弹出栈顶元素
+            while (stack.peek() != -1 && heights[stack.peek()] >= heights[i]) {
+                int height = heights[stack.pop()];
+                int width = i - stack.peek() - 1;
+                maxArea = Math.max(maxArea, height * width);   
+            }
+
+            stack.push(i);
+        }
+
+        while (stack.peek() != -1) {
+            int height = heights[stack.pop()];
+            int width = heights.length - stack.peek() - 1;
+            maxArea = Math.max(maxArea, height * width);
+        }
+        return maxArea;
+
+    }
+}
+```
+
+
+---
+
+## 面试题40：矩阵中的最大矩形
+
+### 思路
+
