--- a/_posts/算法/剑指offer第二版/2023-04-04-栈.md
+++ b/_posts/算法/剑指offer第二版/2023-04-04-栈.md
@@ -152,3 +152,52 @@ class Solution {
 
 ### 思路
 
+```java
+class Solution {
+    public int maximalRectangle(String[] matrix) {
+        if (matrix.length == 0) {
+            return 0;
+        }
+        int cols = matrix[0].length();
+        int[] heights = new int[cols];
+        int maxArea = 0;
+        for (String str : matrix) {
+            if (str.length() != cols) {
+                return 0;
+            }
+            for (int i = 0; i < str.length(); i++) {
+                char ch = str.charAt(i);
+                if (ch == '0') {
+                    heights[i] = 0;
+                } else {
+                    heights[i]++;
+                } 
+            }
+            //这一句记得放在这里
+            maxArea = Math.max(maxArea, getMaxArea(heights));
+        }
+        return maxArea;
+    }
+    //这个方法就是上一题求最大矩形的题
+    public int getMaxArea(int[] heights) {
+        Stack<Integer> stack = new Stack<>();
+        stack.push(-1);
+        int maxArea = 0;
+        for (int i = 0; i < heights.length; i++) {
+            while (stack.peek() != -1 && heights[stack.peek()] >= heights[i]) {
+                int height = heights[stack.pop()];
+                int area = height * (i - stack.peek() - 1);
+                maxArea = Math.max(maxArea, area);
+            }
+            stack.push(i);
+        }
+        while (stack.peek() != -1) {
+            int height = heights[stack.pop()];
+            int area = height * (heights.length - stack.peek() - 1);
+            maxArea = Math.max(maxArea, area);
+        }
+        return maxArea;
+    }
+}
+```
+
