--- a/_posts/算法/剑指offer第二版/2023-04-07-动态规划.md
+++ b/_posts/算法/剑指offer第二版/2023-04-07-动态规划.md
@@ -159,3 +159,347 @@ class Solution {
 
 ### 思路
 
+```java
+class Solution {
+    public int lenLongestFibSubseq(int[] arr) {
+        Map<Integer, Integer> map = new HashMap<>();
+        for (int i = 0; i < arr.length; i++) {
+            map.put(arr[i], i);
+        }
+
+        int[][] dp = new int[arr.length][arr.length];
+        int maxLength = 2;
+        for (int i = 1; i < arr.length; i++) {
+            for (int j = 0; j < i; j++) {
+                int k = map.getOrDefault(arr[i] - arr[j], -1);//是否存在arr[k],使arr[k] + arr[j] = arr[i]
+                if (k >= 0 && k < j) {
+                    dp[i][j] = dp[j][k] + 1;
+                } else {
+                    dp[i][j] = 2;
+                }
+                maxLength = Math.max(maxLength, dp[i][j]);
+            }
+        }
+        return maxLength <= 2 ? 0 : maxLength;
+    }
+}
+```
+
+---
+## 面试题94：最少回文分割
+
+### 思路
+
+```java
+class Solution {
+    public int minCut(String s) {
+        int len = s.length();
+        boolean[][] isPal = new boolean[len][len];
+        for (int i = 0; i < len; i++) {
+            for (int j = 0; j <= i; j++) {
+                char chI = s.charAt(i);
+                char chJ = s.charAt(j);
+                if ((chI == chJ) && (i <= j + 1 || isPal[j+1][i-1])) {
+                    isPal[j][i] = true;
+                }
+            }
+        }
+
+        int[] dp = new int[len];
+        for (int i = 0; i < len; i++) {
+            if (isPal[0][i]) {
+                dp[i] = 0;
+            } else {
+                dp[i] = i;
+                for (int j = 1; j <= i; j++) {
+                    if (isPal[j][i]) {
+                        dp[i] = Math.min(dp[j-1] + 1, dp[i]);
+                    }
+                }
+            }
+        }
+        return dp[len - 1];
+
+
+
+    }
+}
+```
+---
+## 双序列问题
+
+---
+## 面试题95：最长公共子序列
+
+### 思路
+
+```java
+class Solution {
+    public int longestCommonSubsequence(String text1, String text2) {
+        int len1 = text1.length();
+        int len2 = text2.length();
+        int[][] dp = new int[len1+1][len2+1];
+        for (int i = 0; i < len1; i++) {
+            for (int j = 0; j < len2; j++) {
+                if (text1.charAt(i) == text2.charAt(j)) {
+                    dp[i+1][j+1] = dp[i][j] + 1;
+                } else {
+                    dp[i+1][j+1] = Math.max(dp[i][j+1], dp[i+1][j]);
+                }
+            }
+        }
+        return dp[len1][len2];
+    }
+}
+```
+---
+## 面试题96：字符串交织
+
+### 思路
+
+```java
+class Solution {
+    public boolean isInterleave(String s1, String s2, String s3) {
+        if (s1.length() + s2.length() != s3.length()) {
+            return false;
+        }
+        boolean[][] dp = new boolean[s1.length() + 1][s2.length() +1];
+        dp[0][0] = true;
+        for (int i = 0; i < s1.length(); i++) {
+            if (s1.charAt(i) == s3.charAt(i)) {
+                dp[i+1][0] = dp[i][0];
+            }
+        }
+        for (int j = 0; j < s2.length(); j++) {
+            if (s2.charAt(j) == s3.charAt(j)) {
+                dp[0][j+1] = dp[0][j];
+            }
+        }
+        for (int i = 0; i < s1.length(); i++) {
+            for (int j = 0; j < s2.length(); j++) {
+                char ch1 = s1.charAt(i);
+                char ch2 = s2.charAt(j);
+                char ch3 = s3.charAt(i + j + 1);
+                dp[i+1][j+1] = (ch1 == ch3 && dp[i][j+1]) || (ch2 == ch3 && dp[i+1][j]);
+            }
+        }
+        return dp[s1.length()][s2.length()];
+    }
+}
+```
+---
+## 面试题97：子序列的数目
+
+### 思路
+
+```java
+class Solution {
+    public int numDistinct(String s, String t) {
+        int[][] dp = new int[s.length() + 1][t.length() + 1];
+        dp[0][0] = 1;
+        for (int i = 0; i < s.length(); i++) {
+            dp[i+1][0] = 1;
+            for (int j = 0; j <= i && j < t.length(); j++) {
+                if (s.charAt(i) == t.charAt(j)) {
+                    dp[i+1][j+1] = dp[i][j+1] + dp[i][j];
+                } else {
+                    dp[i+1][j+1] = dp[i][j+1];
+                }
+            }
+        }
+        return dp[s.length()][t.length()];
+    }
+}
+```
+
+---
+## 矩阵路径问题
+
+---
+
+## 面试题98：路径的数目
+
+### 思路
+
+```java
+class Solution {
+    public int uniquePaths(int m, int n) {
+        int[][] dp = new int[m][n];
+        for (int i = 0; i < m; i++) {
+            dp[i][0] = 1;
+        }
+        for (int j = 0; j < n; j++) {
+            dp[0][j] = 1;
+        }
+        for (int i = 1; i < m; i++) {
+            for (int j = 1; j < n; j++) {
+                dp[i][j] = dp[i-1][j] + dp[i][j-1];
+            }
+        }
+        return dp[m-1][n-1];
+
+    }
+}
+```
+
+---
+## 面试题99：最小路径之和
+
+### 思路
+
+```java
+class Solution {
+    public int minPathSum(int[][] grid) {
+        int[][] dp = new int[grid.length][grid[0].length];
+        dp[0][0] = grid[0][0];
+        for (int i = 1; i < grid.length; i++) {
+            dp[i][0] = dp[i-1][0] + grid[i][0];
+        }
+        for (int j = 1; j < grid[0].length; j++) {
+            dp[0][j] = dp[0][j-1] + grid[0][j];
+        }
+
+        for (int i = 1; i < grid.length; i++) {
+            for (int j = 1; j < grid[0].length; j++) {
+                dp[i][j] = Math.min(dp[i-1][j], dp[i][j-1]) + grid[i][j];
+            }
+        }
+        return dp[grid.length - 1][grid[0].length - 1];
+    }
+}
+```
+## 面试题100：三角形中最小路径之和
+
+### 思路
+
+```java
+class Solution {
+    public int minimumTotal(List<List<Integer>> triangle) {
+        int len = triangle.size();
+        int[][] dp = new int[len][len];
+        for (int i = 0; i < len; i++) {
+            for (int j = 0; j <= i; j++) {
+                if (i == 0) {
+                    dp[i][j] = triangle.get(i).get(j);
+                } else if (i > 0 && j == 0) {
+                    dp[i][j] = dp[i-1][j] + triangle.get(i).get(j);
+                } else if (i > 0 && i == j) {
+                    dp[i][j] = dp[i-1][j-1] + triangle.get(i).get(j);
+                } else {
+                    dp[i][j] = Math.min(dp[i-1][j], dp[i-1][j-1]) + triangle.get(i).get(j);
+                }
+            }
+        }
+
+
+        int result = Integer.MAX_VALUE;
+        for (int j = 0; j < len; j++) {
+            result = Math.min(dp[len-1][j], result);
+        }
+        return result;
+    }
+}
+```
+---
+## 背包问题
+
+---
+## 面试题101：分割等和子集
+
+### 思路
+
+```java
+class Solution {
+    public boolean canPartition(int[] nums) {
+        int sum = 0;
+        for (int num : nums) {
+            sum += num;
+        }
+        int target = sum / 2;
+        if (sum % 2 != 0) {
+            return false;
+        }
+
+
+        boolean[][] dp = new boolean[nums.length + 1][target + 1];
+        for (int i = 0; i <= nums.length; i++) {
+            dp[i][0] = true;
+        }
+        for (int i = 1; i < nums.length + 1; i++) {
+            for (int j = 1; j < target + 1; j++) {
+                dp[i][j] = dp[i-1][j];
+                if (!dp[i][j] && j >= nums[i-1]) {
+                    dp[i][j] = dp[i-1][j-nums[i-1]];
+                }
+            }
+        }
+        return dp[nums.length][target];
+    }
+}
+```
+---
+## 面试题102：加减的目标值
+
+### 思路
+
+为啥这个不行？
+```java
+class Solution {
+    public int findTargetSumWays(int[] nums, int target) {
+        int sum = 0;
+        for (int num : nums) {
+            sum += num;
+        }
+        if (sum < target || (sum + target) % 2 != 0) {
+            return 0;
+        }
+        int t = (target + sum) / 2;
+
+        int[][] dp = new int[nums.length+1][t+1];
+        dp[0][0] = 1;
+
+        for (int i = 1; i <= nums.length; i++) {
+            if (nums[i-1] == 0) {
+                dp[i][0] = dp[i-1][0];
+            }
+        }
+        for (int j = 1; j <= t; j++) {
+            dp[0][j] = 0;
+        }
+
+        for (int i = 1; i <= nums.length; i++) {
+            for (int j = 1; j <= t; j++) {
+                dp[i][j] = dp[i-1][j];
+                if (j >= nums[i-1]) {
+                    dp[i][j] += dp[i-1][j-nums[i-1]];
+                }
+            }
+        }
+        return dp[nums.length][t];
+    }
+}
+```
+书上是这个：
+```java
+class Solution {
+    public int findTargetSumWays(int[] nums, int target) {
+        int sum = 0;
+        for (int num : nums) {
+            sum += num;
+        }
+        if (sum < target || (sum + target) % 2 != 0) {
+            return 0;
+        }
+        int t = (target + sum) / 2;
+
+        int[] dp = new int[t+1];
+        dp[0] = 1;
+        for (int num : nums) {
+            for (int j = t; j >= num; j--) {
+                dp[j] += dp[j - num];
+            }
+        }
+        return dp[t];
+    }
+}
+```
