--- a/_posts/算法/剑指offer第二版/2023-04-07-动态规划.md
+++ b/_posts/算法/剑指offer第二版/2023-04-07-动态规划.md
@@ -440,8 +440,7 @@ class Solution {
 ---
 ## 面试题102：加减的目标值
 
-### 思路
-
+### 思路!!!
 为啥这个不行？
 ```java
 class Solution {
@@ -503,3 +502,60 @@ class Solution {
     }
 }
 ```
+---
+## 面试题103：最少的硬币数目
+
+### 思路!!!
+```java
+class Solution {
+    public int coinChange(int[] coins, int amount) {
+        int len = coins.length;
+        int[][] dp = new int[len+1][amount+1];
+        for (int i = 0; i<=len; i++) {
+            for (int j = 0; j<=amount; j++) {
+                dp[i][j] = amount + 1;
+            }
+        }
+        for (int i = 0; i <= len; i++) {
+            dp[i][0] = 0;
+        }
+
+
+        for (int i = 1; i <= len; i++) {
+            for (int j = amount; j >= 1; j--) {
+                dp[i][j] = Math.min(dp[i][j], dp[i-1][j]); //重要！！！，一定要搞清楚每个比较项
+                for (int k = 1; j >= k * coins[i-1]; k++) {
+                    dp[i][j] = Math.min(dp[i][j], dp[i-1][j-k*coins[i-1]] + k);
+                }
+            }
+        }
+        return dp[len][amount] > amount ? -1 : dp[len][amount];
+    }
+}
+```
+---
+## 面试题104：排列的数目
+
+### 思路!!! 
+
+为什么不能用二维数组解决呢？用f(i, j)表示用前i个数字组成和为j的组合数，应该怎么做？如何解决"顺序不同的序列视为不同的组合"这个问题？
+```java
+class Solution {
+    public int combinationSum4(int[] nums, int target) {
+        int len = nums.length;
+        int[] dp = new int[target+1];
+        dp[0] = 1;
+        for (int j = 1; j <= target; j++) {
+            for (int num : nums) {
+                if (j >= num) {
+                    dp[j] += dp[j - num];
+                }
+                
+            }
+        }
+        return dp[target];
+    }
+}
+```
+
+
