--- a/_posts/算法/剑指offer第二版/2023-04-10-图.md
+++ b/_posts/算法/剑指offer第二版/2023-04-10-图.md
@@ -35,7 +35,8 @@ class Solution {
         int area = 0;
         Queue<int[]> queue = new LinkedList<>();
         queue.add(new int[]{i, j});
-        int[][] dirs = { {-1, 0}, {1, 0}, {0, 1}, {0, -1} };
+        int[][] dirs = { {-1, 0}, {1, 0}, {0, 1}, {0, -1}
+        };
         visited[i][j] = true;
         while (!queue.isEmpty()) {
             int[] pos = queue.poll();
