--- a/_posts/算法/剑指offer第二版/2023-04-10-图.md
+++ b/_posts/算法/剑指offer第二版/2023-04-10-图.md
@@ -122,7 +122,8 @@ class Solution {
             }
         }
 
-        int[][] dirs = {{-1, 0}, {1, 0}, {0, -1}, {0, 1}};
+        int[][] dirs = {{-1, 0}, {1, 0}, {0, -1}, {0, 1}
+        };
         while (!queue.isEmpty()) {
             int[] cur = queue.poll();
 
@@ -389,7 +390,8 @@ class Solution {
         if (lengths[i][j] != 0) {
             return lengths[i][j];
         }
-        int[][] dirs = {{-1, 0}, {1, 0}, {0, -1}, {0, 1}};
+        int[][] dirs = {{-1, 0}, {1, 0}, {0, -1}, {0, 1}
+        };
         int length = 1;
         for (int[] dir : dirs) {
             int r = i + dir[0];
