--- a/_posts/算法/剑指offer第二版/2023-04-14-动态规划与贪婪算法.md
+++ b/_posts/算法/剑指offer第二版/2023-04-14-动态规划与贪婪算法.md
@@ -455,3 +455,11 @@ public class Solution {
     }
 }
 ```
+
+## 面试题23：链表中环的入口节点
+
+### 思路
+
+剑指offer第二版中的思路比较死板，先一块一慢指针得到环中相遇节点，再通过该相遇节点环绕一周
+得到环的大小，再用一快一慢指针得到环的入口节点。
+
