--- a/_posts/算法/剑指offer第二版/2023-04-14-动态规划与贪婪算法.md
+++ b/_posts/算法/剑指offer第二版/2023-04-14-动态规划与贪婪算法.md
@@ -10,7 +10,413 @@ tags:
   - 算法
   - 动态规划与贪婪算法
 ---
-  
+
+## 面试题3：数组中重复的数字
+
+### 思路
+因为要统计每个数字出现的次数，所以一般的思路就是用哈希表统计每个数字出现的次数，这种方法需要有一个哈希表存放数字出现的次数，所以空间复杂度是O(n)，而且也没有利用到"所有数字在0到n-1范围内这个条件"。
+另一种思路是:如果n个数字每个数字都只出现一次的话，那么排好序之后，下标为i的数字肯定就是i，但因为有重复数字，所以如果排好序的话肯定有下标为i而数字不是i的情况，
+
+从头到尾遍历每个数字，当扫描到下标为i的数字时，首先比较这个数字（用m表示）是不是等于i。如果是，则接着扫描下一个数字；如果不是，则再拿它和
+第m个数字进行比较。如果它和第m个数字相等，就找到了一个重复的数字；如果它和第m个数字不相等，就把第i个数字和第m个数字交换，把m放到属于它的位置。
+接下来重复这个比较、交换的过程，直到我们发现一个重复的数字。
+
+```java
+public class Solution {
+    /**
+     * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+     *
+     * 
+     * @param numbers int整型一维数组 
+     * @return int整型
+     */
+    public int duplicate (int[] numbers) {
+        // write code here
+        for (int i = 0; i < numbers.length; i++) {
+            if (numbers[i] == i) {
+                continue;
+            } else {
+                int num = numbers[numbers[i]];
+                if (num == numbers[i]) {
+                    return num;
+                } else {
+                    swap(numbers, i, numbers[i]);
+                }
+            }
+        }
+        return -1;
+    }
+
+    private void swap(int[] numbers, int i, int j) {
+        int tmp = numbers[i];
+        numbers[i] = numbers[j];
+        numbers[j] = tmp;
+    }
+}
+```
+---
+## 面试题4：二维数组中的查找
+
+### 思路
+从矩阵的右上角或左下角开始搜索，如果该数字大于要查找的数字，则左移一边；如果该数字小于要查找的数字，则下移一行。
+```java
+public class Solution {
+    public boolean Find(int target, int [][] array) {
+        if (array.length == 0 || array[0].length == 0) {
+            return false;
+        }
+
+        int i = 0;
+        int j = array[0].length - 1;
+        while (i >=0 && i < array.length && j >= 0 && j < array[0].length) {
+            if (array[i][j] == target) {
+                return true;
+            } else if (array[i][j] < target) {
+                i++;
+            } else {
+                j--;
+            }
+        }
+        return false;
+    }
+}
+```
+
+## 面试题5：替换空格
+
+### 思路
+要用一个字符数组承接新字符串
+```java
+public class Solution {
+    /**
+     * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+     *
+     * 
+     * @param s string字符串 
+     * @return string字符串
+     */
+    public String replaceSpace (String s) {
+        // write code here
+        int afterLen = s.length();
+        for (char ch : s.toCharArray()) {
+            if (ch == ' ') {
+                afterLen += 2;
+            }
+        }
+        int p1 = s.length() - 1;
+        int p2 = afterLen - 1;
+        char[] afterStr = new char[afterLen];
+        while (p1 >= 0) {
+            if (s.charAt(p1) != ' ') {
+                afterStr[p2--] = s.charAt(p1);
+            } else {
+                afterStr[p2--] = '0';
+                afterStr[p2--] = '2';
+                afterStr[p2--] = '%';
+            }
+            p1--;
+        }
+        return new String(afterStr);
+    }
+}
+```
+
+
+
+
+## 面试题6：从尾到头打印链表
+
+### 思路
+
+首先想到的是用栈存放节点，而递归在本质上就是一个栈结构，所以又可以用递归
+来实现。
+
+```java
+import java.util.ArrayList;
+import java.util.List;
+public class Solution {
+    public ArrayList<Integer> printListFromTailToHead(ListNode listNode) {
+        ArrayList<Integer> res = new ArrayList<>();
+        helper(listNode, res);
+        return res;
+    }
+    private void helper(ListNode node, List<Integer> res) {
+        if (node != null) {
+            helper(node.next, res);
+            res.add(node.val);
+        }
+    }
+}
+```
+
+## 面试题7：重建二叉树
+
+### 思路
+记住递归函数的参数是，
+先序左边界，先序右边界，中序左边界。
+```java
+public class Solution {
+    public TreeNode reConstructBinaryTree(int [] pre,int [] vin) {
+        Map<Integer, Integer> map = new HashMap<>();
+        for (int i = 0; i < vin.length; i++) {
+            map.put(vin[i], i);
+        }
+        return constructTree(pre, map, 0, pre.length - 1, 0);
+    }
+
+/**
+先序左边界
+先序右边界
+中序左边界
+ */
+
+    private TreeNode constructTree(int[] pre, Map<Integer, Integer> map, int preLeft, int preRight, int inLeft) {
+        if (preLeft > preRight) {
+             return null;
+        }
+        TreeNode root = new TreeNode(pre[preLeft]);
+        int inIndex = map.get(pre[preLeft]);
+        int len = inIndex - inLeft;
+        root.left = constructTree(pre, map, preLeft + 1, preLeft + len, inLeft);
+        root.right = constructTree(pre, map, preLeft + len + 1, preRight, inIndex + 1);
+        return root;
+    }
+}
+```
+---
+## 面试题8：二叉树的下一个节点
+
+### 思路
+
+1.如果有右子树，则下一个节点就是右子树的最左节点
+2.如果该节点是它父节点的左子节点，则下一个节点就是它的父节点
+3.如果该节点是它父节点的右子节点，则先上找父节点，直到找到一个节点x，该x节点是它的父节点的左子节点，则下一个节点就是x的父节点。
+如果找不到，就没有下一个节点
+
+上面2和3点可以合并为一点：只要往上找父节点找到一个节点x，x是x父节点的左字节点，则返回x的父节点。
+
+```java
+public class Solution {
+    public TreeLinkNode GetNext(TreeLinkNode pNode) {
+        if (pNode == null) {
+            return null;
+        }
+        if (pNode.right != null) {
+            TreeLinkNode node = pNode.right;
+            while (node.left != null) {
+                node = node.left;
+            }
+            return node;
+        } else {
+            while (pNode.next != null) {
+                TreeLinkNode parent = pNode.next;
+                if (parent.left == pNode) {
+                    return parent;
+                }
+                pNode = pNode.next;
+            }
+        }
+        return null;
+    }
+}
+```
+
+## 面试题9：用两个栈实现队列
+
+### 思路
+
+队列有add有remove操作。
+- 在队尾插入节点的时候，直接插入stack1；
+- 在队头删除节点的时候，如果stack2不为空，直接删除stack2栈顶元素；如果
+  stack2为空，将stack1元素全部放入stack2中，在删除stack2栈顶元素。
+
+```java
+public class Solution {
+    Stack<Integer> stack1 = new Stack<Integer>();
+    Stack<Integer> stack2 = new Stack<Integer>();
+    
+    public void push(int node) {
+        stack1.push(node);
+    }
+    
+    public int pop() {
+        if (!stack2.isEmpty()) {
+            return stack2.pop();
+        } else {
+            while (!stack1.isEmpty()) {
+                stack2.push(stack1.pop());
+            }
+            return stack2.pop();
+        }
+    }
+}
+```
+
+
+## 面试题10：斐波那契数列
+
+### 思路
+有很多种方法：
+- 递归 （不好，会重复计算）
+- 迭代
+- 动态规划 （用数组保存 vs 用两个变量保存）
+  相似的问题还有：
+- 青蛙跳台阶（可以跳1级也可以跳2级 vs 可以跳1级，可以跳2级...可以跳n级）
+- 填充矩形有多少中方法
+
+```java
+public class Solution {
+    public int Fibonacci(int n) {
+
+        if (n == 0 || n == 1) {
+            return n;
+        }
+        int pre2 = 0;
+        int pre1 = 1;
+        int res = pre2 + pre1;
+        for (int i = 2; i <= n; i++) {
+            res = pre1 + pre2;
+            pre2 = pre1;
+            pre1 = res;
+        }
+        return res;
+    }
+}
+```
+
+## 面试题11：旋转数组的最小数字
+
+### 思路
+
+```java
+public class Solution {
+    public int minNumberInRotateArray(int [] array) {
+        int left = 0;
+        int right = array.length - 1;
+        while (array[left] >= array[right]) { //用left < right 也是可以的
+            if (left + 1 == right) {
+                return array[right];
+            } 
+            int mid = left + (right - left) / 2;
+            if (array[left] == array[right] && array[left] == array[mid]) {
+                return minNum(array);
+            }
+            if (array[mid] >= array[left]) {
+                left = mid;
+            } else if (array[mid] <= array[right]) { //直接else也是可以的
+                right = mid;
+            }
+
+        }
+        return array[left];
+    }
+
+    private int minNum(int[] array) {
+        int res = array[0];
+        for (int num : array) {
+            if (num < res) {
+                res = num;
+            }
+        }
+        return res;
+    }
+}
+```
+
+---
+
+## 面试题12：矩阵中的路径
+
+### 思路
+
+```java
+public class Solution {
+    /**
+     * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+     *
+     * 
+     * @param matrix char字符型二维数组 
+     * @param word string字符串 
+     * @return bool布尔型
+     */
+    public boolean hasPath (char[][] matrix, String word) {
+        // write code here
+        boolean[][] visited = new boolean[matrix.length][matrix[0].length];
+        for (int i = 0; i < matrix.length; i++) {
+            for (int j = 0; j < matrix[0].length; j++) {
+                
+                if (helper(matrix, word, 0, i, j, visited)) {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+    //判断（i， j）位置的字符是否是word中的index字符
+    private boolean helper(char[][] matrix, String word, int index, int i, int j, boolean[][] visited) {
+        if (index >= word.length()) {
+            return true;
+        } else {
+            int[][] dirs = { {-1, 0}, {1, 0}, {0, -1}, {0, 1} };
+            if (i >=0 && j >= 0 && i < matrix.length && j < matrix[0].length && !visited[i][j] && matrix[i][j] == word.charAt(index)) {
+                visited[i][j] = true;
+                for (int[] dir : dirs) {
+                    int newR = i + dir[0];
+                    int newC = j + dir[1];
+                    if (helper(matrix, word, index + 1, newR, newC, visited)) {
+                        return true;
+                    } 
+                }
+                visited[i][j] = false; //这里要注意，是遍历完四个方向后再回溯
+            }
+            return false;
+        }
+    }
+}
+```
+## 面试题13：机器人的运动范围
+
+### 思路
+
+```java
+public class Solution {
+    public int movingCount(int threshold, int rows, int cols) {
+        int[] count = {0};
+        boolean[][] visited = new boolean[rows][cols];
+        helper(threshold, rows, cols, visited, 0, 0, count);
+        return count[0];
+    }
+    private void helper(int threshold, int rows, int cols, boolean[][] visited, int i, int j, int[] count) {
+        if (i >= 0 && j >= 0 && i < rows && j < cols && !visited[i][j] && bitSum(i, j) <= threshold) {
+            count[0]++;
+            visited[i][j] = true;
+            int[][] dirs = { {-1, 0}, {1, 0}, {0, -1}, {0, 1} };
+            for (int[] dir : dirs) {
+                helper(threshold, rows, cols, visited, i+dir[0], j+dir[1], count);
+            }
+            // visited[i][j] = false; //这里不需要回溯
+        }
+    }
+
+    private int bitSum(int i, int j) {
+        int sum = 0;
+        while (i != 0) {
+            sum += i % 10;
+            i /= 10;
+        }
+        while (j != 0) {
+            sum += j % 10;
+            j /= 10;
+        }
+        return sum;
+    }
+}
+
+```
+
+
+
+
 ## 面试题14：剪绳子
 
 ### 思路
@@ -463,3 +869,171 @@ public class Solution {
 剑指offer第二版中的思路比较死板，先一块一慢指针得到环中相遇节点，再通过该相遇节点环绕一周
 得到环的大小，再用一快一慢指针得到环的入口节点。
 
+```java
+/**
+ * Definition for singly-linked list.
+ * class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode(int x) {
+ *         val = x;
+ *         next = null;
+ *     }
+ * }
+ */
+public class Solution {
+    public ListNode detectCycle(ListNode head) {
+        ListNode inLoop = getNodeInLoop(head);
+        if (inLoop == null) {
+            return null;
+        }
+        ListNode node = head;
+        while (node != inLoop) {
+            node = node.next;
+            inLoop = inLoop.next;
+        }
+        return node;
+    }
+    //一快一慢得到相遇节点
+    // public ListNode getNodeInLoop(ListNode head) {
+    //     if (head == null || head.next == null) {
+    //         return null;
+    //     }
+    //     ListNode slow = head.next;
+    //     ListNode fast = slow.next;
+    //     while (slow != null && fast != null) {
+    //         if (slow == fast)
+    //             return slow;
+    //         slow = slow.next;
+    //         fast = fast.next;
+    //         if (fast != null)
+    //             fast = fast.next;
+    //     }
+    //     return null;
+    // }
+  
+  //要特别注意slow和fast节点的初始位置
+    private ListNode getNodeInLoop(ListNode head) {
+        if (head == null || head.next == null) {
+            return null;
+        }
+        ListNode slow = head.next;
+        ListNode fast = head.next.next;
+        while (slow != fast) {
+            if (fast == null || fast.next == null) {
+                return null;
+            }
+            slow = slow.next;
+            fast = fast.next.next;
+        }
+        return slow;
+    }
+}
+```
+
+## 面试题24：反转链表
+
+### 思路
+
+```java
+public class Solution {
+    public ListNode ReverseList(ListNode head) {
+        ListNode pre = null;
+        ListNode cur = head;
+        while (cur != null) {
+            ListNode next = cur.next;
+            cur.next = pre;
+            pre = cur;
+            cur = next;
+        }
+        return pre;
+    }
+}
+```
+## 面试题25：合并两个排序的链表
+
+### 思路
+
+```java
+/*
+public class ListNode {
+    int val;
+    ListNode next = null;
+
+    ListNode(int val) {
+        this.val = val;
+    }
+}*/
+public class Solution {
+    public ListNode Merge(ListNode list1,ListNode list2) {
+        if (list1 == null) {
+            return list2;
+        }
+        if (list2 == null) {
+            return list1;
+        }
+        ListNode p1 = list1;
+        ListNode p2 = list2;
+        ListNode dummy = new ListNode(0);
+        ListNode cur = dummy;
+        while (p1 != null || p2 != null) {
+            if (p1 == null) {
+                cur.next = p2;
+                break;
+            }
+            if (p2 == null) {
+                cur.next = p1;
+                break;
+            }
+            if (p1.val < p2.val) {
+                cur.next = p1;
+                cur = p1;
+                p1 = p1.next;
+            } else {
+                cur.next = p2;
+                cur = p2;
+                p2 = p2.next;
+            }
+
+        }
+        return dummy.next;
+    }
+}
+
+```
+
+下面这种也是可以的
+
+```java
+class Solution {
+    public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
+        ListNode dummy = new ListNode(-1);
+        ListNode cur = dummy;
+        while(l1 != null && l2 != null) {
+            if (l1.val <= l2.val) {
+                cur.next = l1;
+                l1 = l1.next;
+            } else {
+                cur.next = l2;
+                l2 = l2.next;
+            }
+            cur = cur.next;
+        }
+        while (l1 != null) {
+            cur.next = l1;
+            l1 = l1.next;
+            cur = cur.next; //这句不能忘
+        }
+        while (l2 != null) {
+            cur.next = l2;
+            l2 = l2.next;
+            cur = cur.next;
+        }
+        return dummy.next;
+    }
+}
+```
+
+## 面试题26：树的子结构
+
+### 思路
