--- a/_posts/算法/剑指offer第二版/2023-04-14-第一部分.md
+++ b/_posts/算法/剑指offer第二版/2023-04-14-第一部分.md
@@ -1,10 +1,10 @@
 ---
-title: 动态规划与贪婪算法
+title: 第一部分
 author: Yu Mengchi
 categories:
   - 算法
   - 剑指offer-第二版
-  - 动态规划与贪婪算法 
+  - 第一部分 
 tags:
   - Interview
   - 算法
@@ -1034,6 +1034,5 @@ class Solution {
 }
 ```
 
-## 面试题26：树的子结构
 
-### 思路
+
